--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: Geometric Physics
-subtitle:
+subtitle: Mathematical Physiscs for the 21st Century
 description:
 author: David Holmes
 email: david.geo.holmes@gmail.com
