--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/tommy351/hexo/
 
 # Site
-title: Geometric Physics
+title: Geometric Physics!
 subtitle: Mathematical Physiscs for the 21st Century
-description:
+description: Mathematical Physiscs for the 21st Century
 author: David Holmes
-email: david.geo.holmes@gmail.com
+email: geometricphysiscs137@gmail.com
 language:
 
 # URL
