--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/tommy351/hexo/
 
 # Site
-title: Geometric Physics!
-subtitle: Mathematical Physiscs for the 21st Century
-description: Mathematical Physiscs for the 21st Century
+title: Geometric Physics
+subtitle: Mathematical Physics for the 21st Century
+description: Mathematical Physics for the 21st Century
 author: David Holmes
 email: geometricphysiscs137@gmail.com
 language:
